# MobitRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  config.toml  imgui.ini  main.cpp  todo.md
.cache/clangd/index/: FA6FreeSolidFontData.h.4C9EDB9E7237089F.idx  IconsFontAwesome6.h.8ED2FCD39506C676.idx  ansicolor_sink-inl.h.C1CB02BDD560E2FB.idx  ansicolor_sink.h.61630551E5CDECD7.idx  async.cpp.39A8BFE2F52C5091.idx  async.h.DFDDC6CDCEEC62A4.idx  async_logger-inl.h.CE0936CAB0598111.idx  async_logger.h.5F17A6B158F21087.idx  backtracer-inl.h.165318E2C7FF14D6.idx  backtracer.h.1B9C962B85A80BBD.idx  base.h.822FC0996FF5696C.idx  base_sink-inl.h.CE4CAF3D69595AF2.idx  base_sink.h.D388ACE277CD9716.idx  basic_file_sink-inl.h.EDBBC623C75D4E50.idx  basic_file_sink.h.685CF0C8F2EB2413.idx  bundled_fmtlib_format.cpp.40B9A6BF60D0F220.idx  cfg.cpp.BB406BB0588BEFED.idx  cgltf.h.948B1D5119D94B8B.idx  circular_q.h.DEDA738F7741AD73.idx  color_sinks.cpp.08DA22ADB655914D.idx  common-inl.h.803000EE0E5C9D7D.idx  common.h.82DEA2A51EA13DE0.idx  config.h.FB408A784B23B6D0.idx  console_globals.h.7BAAC6C2C319E464.idx  context.c.ED5C8D1BB66DE5B1.idx  core.h.9021830B670C5AB9.idx  definitions.h.C6ACD0C4CF1DEC4A.idx  dr_mp3.h.6E1A6CCEF4B8F066.idx  dr_wav.h.912C89C028B6051C.idx  draw.h.CC5646C9401D0966.idx  egl_context.c.11906B7E35F8E686.idx  exceptions.cpp.CFB1E7F7E9F6EA18.idx  exceptions.h.E53371137163C04B.idx  file_helper-inl.h.55BEBF3D9C40D888.idx  file_helper.h.74F413C94420464A.idx  file_sinks.cpp.45E00F6137C7224F.idx  fmt.h.0927B3779A1A64B9.idx  fmt_helper.h.D7586A4A0A64C55C.idx  format-inl.h.343A99A46F2628AF.idx  format.h.BAE7650E2287D1AB.idx  (+142 more)
.github/workflows/: main.yml
Assets/Shaders/: apply_alpha.frag  apply_alpha_vflip.frag  bevel.frag  binary_map.frag  cross_binary_map.frag  ink.frag  invb.frag  palette_sky.frag  red_encoder.frag  rgb_apply_palette.frag  soft.frag  varied_soft.frag  varied_voxel_struct.frag  vflip.frag  voxel_struct.frag  voxel_struct_tinted.frag  white_remover.frag  white_remover_apply_color.frag  white_remover_apply_color_vflip.frag  white_remover_apply_white_tint_vflip.frag  white_remover_vflip.frag
assets/Shaders/: white_remover_apply_alpha.frag  white_remover_rgb_recolor.frag
include/: definitions.h  exceptions.h  matrix.h  state.h
include/MobitRenderer/: atlas.h  castlibs.h  config.h  coroutines.h  default_array.h  definitions.h  dex.h  dirs.h  draw.h  events.h  exceptions.h  imwin.h  io.h  level.h  managed.h  matrix.h  pages.h  parsing.h  quad.h  rect.h  renderer.h  sdraw.h  serialization.h  shortcuts.h  state.h  utils.h  vec.h  winmodes.h
include/MobitRenderer/renderer/: state.h
libs/MobitParser/: CMakePresets.json
libs/parser/: node.cpp  node.hpp  parsing.cpp  token.cpp  token.hpp
libs/toml/: toml.hpp
src/: atlas.cpp  autorendermode.cpp  castlibs.cpp  config.cpp  dex.cpp  dirs.cpp  events.cpp  exceptions.cpp  f3.cpp  filexplorer.cpp  geocell.cpp  geodraw.cpp  level.cpp  main.cpp  mainpage.cpp  managed.cpp  materialdef.cpp  nodes.cpp  pager.cpp  parsing.cpp  propdef.cpp  quad.cpp  serialization.cpp  shortcuts.cpp  startpage.cpp  state.cpp  tilecell.cpp  tiledef.cpp  tiledraw.cpp  tokens.cpp  utils.cpp
src/draw/: general.cpp  geo.cpp  geodraw.cpp  geos.cpp  tiledraw.cpp  tiles.cpp
src/pages/: cameras.cpp  dimensions.cpp  effects.cpp  geo.cpp  geopage.cpp  light.cpp  main.cpp  mainpage.cpp  page.cpp  props.cpp  settings.cpp  start.cpp  startpage.cpp  tilepage.cpp  tiles.cpp
src/platform/linux/: io.cpp
src/platform/windows/: io.cpp
src/renderer/: imgui.ini  main.cpp  materials.cpp  props.cpp  tiles.cpp
src/sdraw/: general.cpp  props.cpp  tiles.cpp
src/serialization/: config.cpp  props.cpp  serialization.cpp  tiles.cpp  utils.cpp
